# ml-recommender

./: .dockerignore  .gitattributes  .gitignore  BACKLOG.md  README.md  backlog.json  docker-compose.yml
.github/: copilot-instructions.md
.github/prompts/: plan-azureMlRecommenderShop.prompt.md
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-infrastructure.yml  deploy.yml  terraform-shared.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py  sshd_config  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 202411270001_initial_schema.py
backend/app/: __init__.py  auth_helpers.py  config.py  db.py  models.py  security.py  serializers.py  typing_compat.py
backend/app/data/: __init__.py  sample_products.py
backend/app/routes/: __init__.py  auth.py  cart.py  health.py  interactions.py  products.py  recommendations.py
backend/app/services/: __init__.py  interactions.py  recommendations.py
backend/scripts/: seed_products.py
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.js  App.tsx  config.ts  main.js  main.tsx  styles.css
infra/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_RECOMMENDATIONS.md
infra/scripts/: build-and-push.sh  deploy-local.sh  init-terraform-state.sh
infra/terraform-app/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf  versions.tf
scripts/: README-create-backlog.md  create_github_backlog.py
(+53 files in other folders)
